--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -4,7 +4,7 @@
 
 
 <h2><b>@Localizer["Question1"]</b></h2>
-<a asp-page="" asp-route-positionid="@Model.positionid">
+<a asp-page="" asp-route-positionid="@Model.PositionId">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/similar.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
@@ -12,7 +12,7 @@
         </figure>
     </div>
 </a>
-<a asp-page="Compare/AllObjective" asp-route-positionid="@Model.positionid">
+<a asp-page="Compare/AllObjective" asp-route-positionid="@Model.PositionId">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/compare.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
@@ -20,7 +20,7 @@
         </figure>
     </div>
 </a>
-<a asp-page="" asp-route-positionid="@Model.positionid">
+<a asp-page="" asp-route-positionid="@Model.PositionId">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
